; ModuleID = '/home/carl/AnghaBench/kphp-kdb/skat/extr_st-utils.c_st_try_init_local_uid.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/skat/extr_st-utils.c_st_try_init_local_uid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@st_try_init_local_uid.was = internal global i32 0, align 4
@st_try_init_local_uid.old_log_split_min = internal global i32 0, align 4
@st_try_init_local_uid.old_log_split_max = internal global i32 0, align 4
@st_try_init_local_uid.old_log_split_mod = internal global i32 0, align 4
@log_split_min = common dso_local global i32 0, align 4
@log_split_max = common dso_local global i32 0, align 4
@log_split_mod = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @st_try_init_local_uid() #0 {
  %1 = load i32, i32* @st_try_init_local_uid.was, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %19

3:                                                ; preds = %0
  %4 = load i32, i32* @st_try_init_local_uid.old_log_split_min, align 4
  %5 = load i32, i32* @log_split_min, align 4
  %6 = icmp eq i32 %4, %5
  br i1 %6, label %7, label %15

7:                                                ; preds = %3
  %8 = load i32, i32* @st_try_init_local_uid.old_log_split_max, align 4
  %9 = load i32, i32* @log_split_max, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %7
  %12 = load i32, i32* @st_try_init_local_uid.old_log_split_mod, align 4
  %13 = load i32, i32* @log_split_mod, align 4
  %14 = icmp eq i32 %12, %13
  br label %15

15:                                               ; preds = %11, %7, %3
  %16 = phi i1 [ false, %7 ], [ false, %3 ], [ %14, %11 ]
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  br label %23

19:                                               ; preds = %0
  store i32 1, i32* @st_try_init_local_uid.was, align 4
  %20 = load i32, i32* @log_split_min, align 4
  store i32 %20, i32* @st_try_init_local_uid.old_log_split_min, align 4
  %21 = load i32, i32* @log_split_max, align 4
  store i32 %21, i32* @st_try_init_local_uid.old_log_split_max, align 4
  %22 = load i32, i32* @log_split_mod, align 4
  store i32 %22, i32* @st_try_init_local_uid.old_log_split_mod, align 4
  br label %23

23:                                               ; preds = %19, %15
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
